fix horizontal content scrolling on mobile

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -5,7 +5,9 @@
   }
 
   .about-bio {
-    width: 80%;
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
     margin-bottom: 3vh;
     margin-left: 0;
   }
